--- a/Galerie.html
+++ b/Galerie.html
@@ -20,7 +20,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "WebSite2628837",
-		"logo": "images/casutabuniciilogoblack.png",
+		"logo": "casutabuniciilogoblack.png",
 		"sameAs": [
 				"https://www.facebook.com/casutabunicii",
 				"http://twitter.com/share?text=Casuta%20Bunicii%20-%20Rusticeden%20-%20Pensiunea%20Casuta%20Bunicii%20-%20Rustic%20Eden%20-%20Casa%20Bunicii&url=http%3A%2F%2Fwww.rusticeden.ro%2Fro%2F",
@@ -39,7 +39,7 @@
   <body class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-align-center-xs u-clearfix u-grey-5 u-header u-sticky u-sticky-0178 u-header" id="sec-a5be"><style class="u-sticky-style" data-style-id="0178">.u-sticky-fixed.u-sticky-0178, .u-body.u-sticky-fixed .u-sticky-0178 {
 box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
 }</style><a href="Home.html" data-page-id="2628879" class="div2 u-align-left u-image u-logo u-image-1" data-image-width="490" data-image-height="111" title="Home">
-        <img src="images/casutabuniciilogoblack.png" class="u-logo-image u-logo-image-1">
+        <img src="casutabuniciilogoblack.png" class="u-logo-image u-logo-image-1">
       </a><nav class="div1 u-align-right u-menu u-menu-one-level u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse u-custom-font u-font-oswald" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase;">
           <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-custom-color-2 u-text-hover-palette-2-base" href="#">
@@ -80,7 +80,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-gallery-item u-gallery-item-1">
               <div class="u-back-slide" data-image-width="1633" data-image-height="1080">
-                <img class="u-back-image u-expanded" src="images/casutabunicii30.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii30.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1">
                 <h3 class="u-gallery-heading"></h3>
@@ -89,7 +89,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-2">
               <div class="u-back-slide" data-image-width="1280" data-image-height="850">
-                <img class="u-back-image u-expanded" src="images/casutabunicii19.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii19.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2">
                 <h3 class="u-gallery-heading"></h3>
@@ -98,7 +98,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-3">
               <div class="u-back-slide" data-image-width="1280" data-image-height="850">
-                <img class="u-back-image u-expanded" src="images/casutabunicii24.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii24.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-3">
                 <h3 class="u-gallery-heading"></h3>
@@ -107,7 +107,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-4">
               <div class="u-back-slide" data-image-width="1280" data-image-height="850">
-                <img class="u-back-image u-expanded" src="images/casutabunicii26.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii26.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-4">
                 <h3 class="u-gallery-heading"></h3>
@@ -116,7 +116,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-5">
               <div class="u-back-slide" data-image-width="1280" data-image-height="850">
-                <img class="u-back-image u-expanded" src="images/casutabunicii25.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii25.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-5">
                 <h3 class="u-gallery-heading"></h3>
@@ -125,7 +125,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-6">
               <div class="u-back-slide" data-image-width="1280" data-image-height="850">
-                <img class="u-back-image u-expanded" src="images/casutabunicii22.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii22.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-6">
                 <h3 class="u-gallery-heading"></h3>
@@ -134,7 +134,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-7">
               <div class="u-back-slide" data-image-width="1280" data-image-height="857">
-                <img class="u-back-image u-expanded" src="images/casutabunicii28.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii28.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-7">
                 <h3 class="u-gallery-heading"></h3>
@@ -143,7 +143,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-8">
               <div class="u-back-slide" data-image-width="1298" data-image-height="1000">
-                <img class="u-back-image u-expanded" src="images/casutabunicii14.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii14.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-8">
                 <h3 class="u-gallery-heading"></h3>
@@ -152,7 +152,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-9">
               <div class="u-back-slide" data-image-width="1200" data-image-height="900">
-                <img class="u-back-image u-expanded" src="images/casutabunicii16.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii16.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-9">
                 <h3 class="u-gallery-heading"></h3>
@@ -161,7 +161,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-10">
               <div class="u-back-slide" data-image-width="607" data-image-height="1080">
-                <img class="u-back-image u-expanded" src="images/casutabunicii12.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii12.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-10">
                 <h3 class="u-gallery-heading"></h3>
@@ -170,7 +170,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-11">
               <div class="u-back-slide" data-image-width="1600" data-image-height="965">
-                <img class="u-back-image u-expanded" src="images/casutabunicii29.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii29.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-11">
                 <h3 class="u-gallery-heading"></h3>
@@ -179,7 +179,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-12">
               <div class="u-back-slide" data-image-width="607" data-image-height="1080">
-                <img class="u-back-image u-expanded" src="images/casutabunicii10.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii10.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-12">
                 <h3 class="u-gallery-heading"></h3>
@@ -188,7 +188,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-13">
               <div class="u-back-slide" data-image-width="1200" data-image-height="803">
-                <img class="u-back-image u-expanded" src="images/casutabunicii13.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii13.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-13">
                 <h3 class="u-gallery-heading"></h3>
@@ -197,7 +197,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-14">
               <div class="u-back-slide" data-image-width="750" data-image-height="500">
-                <img class="u-back-image u-expanded" src="images/casutabunicii15.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii15.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-14">
                 <h3 class="u-gallery-heading"></h3>
@@ -206,7 +206,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-15">
               <div class="u-back-slide" data-image-width="717" data-image-height="1080">
-                <img class="u-back-image u-expanded" src="images/casutabunicii9.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii9.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-15">
                 <h3 class="u-gallery-heading"></h3>
@@ -215,7 +215,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-16">
               <div class="u-back-slide" data-image-width="1280" data-image-height="850">
-                <img class="u-back-image u-expanded" src="images/casutabunicii27.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii27.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-16">
                 <h3 class="u-gallery-heading"></h3>
@@ -224,7 +224,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-17">
               <div class="u-back-slide" data-image-width="1280" data-image-height="850">
-                <img class="u-back-image u-expanded" src="images/casutabunicii23.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii23.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-17">
                 <h3 class="u-gallery-heading"></h3>
@@ -233,7 +233,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-18">
               <div class="u-back-slide" data-image-width="1200" data-image-height="675">
-                <img class="u-back-image u-expanded" src="images/casutabunicii11.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii11.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-18">
                 <h3 class="u-gallery-heading"></h3>
@@ -242,7 +242,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-19">
               <div class="u-back-slide" data-image-width="1280" data-image-height="850">
-                <img class="u-back-image u-expanded" src="images/casutabunicii20.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii20.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-19">
                 <h3 class="u-gallery-heading"></h3>
@@ -251,7 +251,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-20">
               <div class="u-back-slide" data-image-width="1280" data-image-height="850">
-                <img class="u-back-image u-expanded" src="images/casutabunicii17.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii17.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-20">
                 <h3 class="u-gallery-heading"></h3>
@@ -260,7 +260,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
             </div>
             <div class="u-effect-fade u-gallery-item u-gallery-item-21">
               <div class="u-back-slide" data-image-width="1280" data-image-height="850">
-                <img class="u-back-image u-expanded" src="images/casutabunicii1.jpg">
+                <img class="u-back-image u-expanded" src="casutabunicii1.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-21">
                 <h3 class="u-gallery-heading"></h3>
@@ -278,7 +278,7 @@ background-color: #f2f2f2 !important
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-color-2 u-footer" id="sec-e252"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Home.html" data-page-id="2628879" class="u-image u-logo u-image-1" data-image-width="490" data-image-height="111" title="Acasă">
-          <img src="images/casutabuniciilogo.png" class="u-logo-image u-logo-image-1">
+          <img src="casutabuniciilogo.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/casutabunicii"><span class="u-icon u-social-facebook u-social-icon u-text-grey-80 u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e05a"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-e05a"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
