--- a/Info.html
+++ b/Info.html
@@ -27,7 +27,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "WebSite2628837",
-		"logo": "images/casutabuniciilogoblack.png",
+		"logo": "casutabuniciilogoblack.png",
 		"sameAs": [
 				"https://www.facebook.com/casutabunicii",
 				"http://twitter.com/share?text=Casuta%20Bunicii%20-%20Rusticeden%20-%20Pensiunea%20Casuta%20Bunicii%20-%20Rustic%20Eden%20-%20Casa%20Bunicii&url=http%3A%2F%2Fwww.rusticeden.ro%2Fro%2F",
@@ -46,7 +46,7 @@
   <body class="u-body u-overlap u-overlap-contrast u-xl-mode" data-lang="en"><header class="u-align-center-xs u-clearfix u-grey-5 u-header u-sticky u-sticky-0178 u-header" id="sec-a5be"><style class="u-sticky-style" data-style-id="0178">.u-sticky-fixed.u-sticky-0178, .u-body.u-sticky-fixed .u-sticky-0178 {
 box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
 }</style><a href="Home.html" data-page-id="2628879" class="div2 u-align-left u-image u-logo u-image-1" data-image-width="490" data-image-height="111" title="Home">
-        <img src="images/casutabuniciilogoblack.png" class="u-logo-image u-logo-image-1">
+        <img src="casutabuniciilogoblack.png" class="u-logo-image u-logo-image-1">
       </a><nav class="div1 u-align-right u-menu u-menu-one-level u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse u-custom-font u-font-oswald" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase;">
           <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-custom-color-2 u-text-hover-palette-2-base" href="#">
@@ -78,7 +78,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
       </nav></header> 
     <section class="u-clearfix u-grey-10 u-section-1" id="carousel_b8b7">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/casutabunicii14.jpg" data-image-width="1298" data-image-height="1000" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0" data-animation-direction="" alt="Căsuța bunicii">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="casutabunicii14.jpg" data-image-width="1298" data-image-height="1000" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0" data-animation-direction="" alt="Căsuța bunicii">
         <div class="u-align-left u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-font-oswald u-text u-text-1">Căsuța&nbsp;<br>bunicii
@@ -92,7 +92,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-section-2" id="carousel_aba0">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-1" src="images/casutabunicii11.jpg" data-image-width="1200" data-image-height="675" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
+        <img class="u-expanded-width-xs u-image u-image-1" src="casutabunicii11.jpg" data-image-width="1200" data-image-height="675" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
         <div class="u-align-left u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-font-oswald u-text u-text-1">Specific tradițional românesc</h2>
@@ -105,7 +105,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-section-3" id="carousel_071b">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-1" src="images/casutabunicii17.jpg" data-image-width="1280" data-image-height="850" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
+        <img class="u-expanded-width-xs u-image u-image-1" src="casutabunicii17.jpg" data-image-width="1280" data-image-height="850" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
         <div class="u-align-left u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-font-oswald u-text u-text-1"> Căsuța Bunicii are:</h2>
@@ -128,7 +128,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-section-4" id="carousel_dae7">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-1" src="images/casutabunicii21.jpg" data-image-width="1200" data-image-height="796" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
+        <img class="u-expanded-width-xs u-image u-image-1" src="casutabunicii21.jpg" data-image-width="1200" data-image-height="796" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
         <div class="u-align-left u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-font-oswald u-text u-text-1"> Atracții&nbsp;<br>turistice
@@ -140,7 +140,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-section-5" id="carousel_f1d3">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-1" src="images/cheile-gradistei-statiune.jpg" data-image-width="1892" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
+        <img class="u-expanded-width-xs u-image u-image-1" src="cheile-gradistei-statiune.jpg" data-image-width="1892" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
         <div class="u-align-left u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-font-oswald u-text u-text-1"> Stațiunea turistică Bran</h2>
@@ -153,7 +153,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-section-6" id="carousel_9645">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-1" src="images/interior-courtyard-bran-castle.jpg" data-image-width="1170" data-image-height="780" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
+        <img class="u-expanded-width-xs u-image u-image-1" src="interior-courtyard-bran-castle.jpg" data-image-width="1170" data-image-height="780" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
         <div class="u-align-left u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-font-oswald u-text u-text-1"> Castelul Bran</h2>
@@ -166,7 +166,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-section-7" id="carousel_6f0e">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-1" src="images/Liftul-de-la-Cetatea-Rasnov-produce-pierderi-administratiei-locale.jpeg" data-image-width="1153" data-image-height="864" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
+        <img class="u-expanded-width-xs u-image u-image-1" src="Liftul-de-la-Cetatea-Rasnov-produce-pierderi-administratiei-locale.jpeg" data-image-width="1153" data-image-height="864" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
         <div class="u-align-left u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-font-oswald u-text u-text-1"> Cetatea Râșnov</h2>
@@ -179,7 +179,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-section-8" id="carousel_870e">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-1" src="images/IMG_20201007_104514-1.jpg" data-image-width="1200" data-image-height="900" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
+        <img class="u-expanded-width-xs u-image u-image-1" src="IMG_20201007_104514-1.jpg" data-image-width="1200" data-image-height="900" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
         <div class="u-align-left u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
           <div class="u-container-layout u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xl u-container-layout-1">
             <h2 class="u-custom-font u-font-oswald u-text u-text-1"> Peştera Valea Cetății</h2>
@@ -192,7 +192,7 @@ box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-section-9" id="carousel_0dbd">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-1" src="images/a1d89013684a3e59-original.jpg" data-image-width="1200" data-image-height="627" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
+        <img class="u-expanded-width-xs u-image u-image-1" src="a1d89013684a3e59-original.jpg" data-image-width="1200" data-image-height="627" data-animation-name="customAnimationIn" data-animation-duration="1250" alt="Căsuța bunicii">
         <div class="u-align-left u-container-style u-expanded-width-xs u-group u-shape-rectangle u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-font-oswald u-text u-text-1">alte activități:</h2>
@@ -210,7 +210,7 @@ background-color: #f2f2f2 !important
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-color-2 u-footer" id="sec-e252"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Home.html" data-page-id="2628879" class="u-image u-logo u-image-1" data-image-width="490" data-image-height="111" title="Acasă">
-          <img src="images/casutabuniciilogo.png" class="u-logo-image u-logo-image-1">
+          <img src="casutabuniciilogo.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/casutabunicii"><span class="u-icon u-social-facebook u-social-icon u-text-grey-80 u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e05a"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-e05a"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
