--- a/Acasă.html
+++ b/Acasă.html
@@ -48,7 +48,7 @@
     <meta name="twitter:description" content="Căsuța Bunicii">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Acasă.html" data-home-page-title="Acasă" class="u-body u-overlap u-overlap-contrast u-xl-mode" data-lang="ro" data-lang-en="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;​Luxury Interior Design Studio, ​Cozy Studio Apartment, ​Elegant und high-quality Interiors, ​Decorating Ideas, ​Vibrant Patterns, Cozy Kitchen, Contact Us&quot;,&quot;head-description&quot;:&quot;&quot;}"><header class="u-clearfix u-grey-5 u-header u-sticky u-sticky-0178 u-header" id="sec-a5be"><style class="u-sticky-style" data-style-id="0178">.u-sticky-fixed.u-sticky-0178, .u-body.u-sticky-fixed .u-sticky-0178 {
+  <body class="u-body u-overlap u-overlap-contrast u-xl-mode" data-lang="ro" data-lang-en="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;​Luxury Interior Design Studio, ​Cozy Studio Apartment, ​Elegant und high-quality Interiors, ​Decorating Ideas, ​Vibrant Patterns, Cozy Kitchen, Contact Us&quot;,&quot;head-description&quot;:&quot;&quot;}"><header class="u-clearfix u-grey-5 u-header u-sticky u-sticky-0178 u-header" id="sec-a5be"><style class="u-sticky-style" data-style-id="0178">.u-sticky-fixed.u-sticky-0178, .u-body.u-sticky-fixed .u-sticky-0178 {
 box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
 }</style><a href="Acasă.html" data-page-id="2628879" class="div2 u-align-left u-image u-logo u-image-1" data-image-width="490" data-image-height="111" title="Home">
         <img src="casutabuniciilogoblack.png" class="u-logo-image u-logo-image-1">
@@ -655,6 +655,6 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-custom-font u-font-oswald u-text u-text-1" data-lang-en="​Copyrights © 2022 All rights reserved.
 ">Căsuța Bunicii © 2022 . Toate drepturile rezervate.&nbsp;</p>
       </div></footer>
-  
+   
   
 </body></html>
